# image-processing

./: README.md  image.cc  image.hpp  image_pyr.cc  image_pyr.hpp
test_basic_image_kernels/: CMakeLists.txt  image_test.cc
test_image_pyramids/: CMakeLists.txt  image_pyr_test.cc
test_read_load_pnm_ppm/: gray.pnm  image_test.cc  rgb.pnm
